Version 2.1.115
    Fixed a bug where Salvage always gave the best results
    Fixed an issue with arrows causing exceptions with players not yet having data loaded
    Spectral arrows are now tracked by mcMMO
    Use minimum level of salvageable properly
    Fix Axes Critical Strikes default permissions ( new fixed permission: mcmmo.ability.axes.criticalstrikes )
    Fix potential null pointer exception for salvage

Version 2.1.114
    Fix some more locale usages, should aim to further prevent issues with oddball locales
    Fixed a bug where newer versions of MySQL did not like our rank command
    Added a new setting to turn off the Snow Golem Exploit prevention to experience.yml next to the other exploit fixes
    Fixed a bug which stopped the optional Endermite XP exploit fix from working

Version 2.1.113
    Activating Berserk on a soft block (glass, snow, dirts) will break that material right away instead of only breaking subsequent blocks hit by the player
    Berserk will now break glass and glass pane blocks
    Hitting glass with berserk readied will activate it
    Added GLASS settings to sounds.yml for Berserk
    Fixed bug where BlockCracker didn't work on infested_stone_bricks
    Fixed a bug where beacons could be duplicated
    Check player's PTP world permissions before executing a party teleport
    Improved how mcMMO handles randomness

Version 2.1.112
    Correct locale usage for enum access, now enforces using the english locale to prevent issues with oddball locales for configs/commands
    Fixed a NPE that can occur if a player engages in combat with specific skills before their profile is loaded
    mcMMO is now more compatible with certain mob stacking plugins
    Improved behaviour for mob health bars
    Archery's Skill Shot bonus damage is now multiplicative instead of additive (nerfing early game skill shot ranks)